# adaptive-evidence-rag

./: .gitignore  Dockerfile  README.md  RESUME_ENTRY.md  api.py  app.py  pyproject.toml  requirements.txt  test_pipeline.py
configs/: compare_config.yaml  config.yaml
data/finetune/: val_grounded.jsonl
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
notebooks/: compare_rag_demo.ipynb  finetune_synthesizer.ipynb  generate_research_graphs.ipynb  train_evidence_rag - Copy.ipynb  train_evidence_rag.ipynb
scripts/: download_data.ps1  download_data.sh  generate_finetune_data.py  run_benchmarks.ps1  setup_env.ps1  setup_env.sh  update_compare_notebook.py
src/: __init__.py  __main__.py  agent_pipeline.py  behavioral_stability.py  cli.py  evaluate.py  evidence_independence.py  models.py  retrieval_utility.py  retriever.py  search_policy.py  utils.py
