[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-evidence-rag"
version = "0.1.0"
description = "Adaptive Evidence-Aware Retrieval for Robust RAG Systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9, <3.12"
authors = [
    {name = "Your Name"},
]
keywords = ["rag", "retrieval-augmented-generation", "evidence", "nlp", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies — the minimum needed to run the pipeline
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "sentence-transformers>=2.2.2",
    "accelerate>=0.25.0",
    "datasets>=2.14.0",
    "huggingface-hub>=0.19.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
# Full install — everything from requirements.txt
full = [
    "torchvision>=0.16.0",
    "torchaudio>=2.1.0",
    "peft>=0.7.0",
    "bitsandbytes>=0.41.0",
    "qdrant-client>=1.6.0",
    "chromadb>=0.4.18",
    "weaviate-client>=3.25.0",
    "nltk>=3.8.0",
    "spacy>=3.7.0",
    "trl>=0.7.0",
    "xformers>=0.0.22",
    "vllm>=0.2.0",
    "openai>=1.6.0",
    "evaluate>=0.4.0",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "sacrebleu>=2.3.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
    "fastapi>=0.105.0",
    "uvicorn>=0.24.0",
    "langchain>=0.0.350",
    "langchain-community>=0.0.1",
    "langchain-core>=0.1.0",
    "langgraph>=0.0.40",
    "aiohttp>=3.9.0",
]

# Notebook support
notebook = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.0",
    "notebook>=7.0.0",
]

# Development tools
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
evidence-rag = "src.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/adaptive-evidence-rag"
Repository = "https://github.com/yourusername/adaptive-evidence-rag"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
src = ["*.yaml", "*.json"]

[tool.pyright]
include = ["src", "notebooks", "tests"]
extraPaths = ["."]
